src/main/metadata-au/objects/Feeback_Day_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Configure the final feedback updating day for the retail compaign(record object), used in the button Unlock_Application_Feedback.</description>
    <fields>
        <fullName>Actual_End_Day__c</fullName>
        <inlineHelpText>The format is "3.31"</inlineHelpText>
        <label>Actual End Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Day__c</fullName>
        <inlineHelpText>The format is "1.1"</inlineHelpText>
        <label>Actual  Start Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Feedback_Day__c</fullName>
        <inlineHelpText>If you want to make the feedback day to the next year, please make sure the text looks like "Next Year 1.31" otherwise the system cannot parse the data correctly.</inlineHelpText>
        <label>Final Feedback Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feeback Day Setting</label>
</CustomObject>  